Finalização da controller de produto

--- a/src/TestBetaApi.API/TestBetaApi.API.csproj
+++ b/src/TestBetaApi.API/TestBetaApi.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\TestBetaApi.Data\TestBetaApi.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagens\" />
+  </ItemGroup>
+
 </Project>
